# Taskflow_app

./: .env.example  .gitignore  .npmrc  ANIMATION_GUIDE.md  DEPLOYMENT_GUIDE.md  EMAIL_SETUP.md  FIX_LOGIN.bat  FOOTER_INTEGRATION.md  RAILWAY_ENVIRONMENT.md  check-ports.bat  netlify.toml  package-lock.json  package.json  requirements.txt  start-all.bat  turbo.json  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Procfile  alembic.ini  generate_token.py  pyproject.toml  railway.toml  restart_server.py  test_login.py
backend/alembic/: env.py
backend/alembic/versions/: 0b0b99173b8a_add_conversation_and_message_tables.py  20250114_add_priority_to_tasks.py  7a553c8ab439_add_composite_indexes_for_conversations_.py
backend/src/: config.py  main.py
backend/src/agents/: __init__.py  todo_agent.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  chat.py  health.py  tasks.py
backend/src/api/schemas/: __init__.py  chat.py
backend/src/mcp/: __init__.py  server.py  tools.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  auth.py  chat.py  email.py  mcp.py  task.py
frontend/: .env.production  next.config.js  package.json  tailwind.config.ts  vercel.json
frontend/public/: create-icons.ps1  create-icons.py  manifest.json  sw.js
specs/001-auth-api-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chatbot-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+53 files in other folders)
